jenkins/deployment.yaml
# deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-master
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins-master
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins-master
    spec:
      containers:
        - name: jenkins
          image: jenkins/jenkins
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-home
          emptyDir: {}
