jenkins/service.yaml
# service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master
  namespace: jenkins
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: jenkins-master
    - port: 50000
      targetPort: 50000
      name: jenkins-jnlp
  selector:
    app: jenkins-master
