jenkins/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jenkins-master.jenkins-svc-cluster.local # Change this to your desired domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-master
            port:
              number: 8080
      - path: /jnlp
        pathType: Prefix
        backend:
          service:
            name: jenkins-master
            port:
              number: 50000
